tests/baselines/reference/privateNameFieldsESNext(strict=true,target=esnext).errors.txt
privateNameFieldsESNext.ts(5,5): error TS7008: Member '#b' implicitly has an 'any' type.
privateNameFieldsESNext.ts(8,9): error TS2322: Type 'string' is not assignable to type 'number'.
privateNameFieldsESNext.ts(12,12): error TS7008: Member '#x' implicitly has an 'any' type.


==== privateNameFieldsESNext.ts (3 errors) ====
    class C {
        a = 123;
        #a = 10;
        c = "hello";
        #b;
        ~~
!!! error TS7008: Member '#b' implicitly has an 'any' type.
        method() {
            console.log(this.#a);
            this.#a = "hello";
            ~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
            console.log(this.#b);
        }
        static #m = "test";
        static #x;
               ~~
!!! error TS7008: Member '#x' implicitly has an 'any' type.
        static test() {
            console.log(this.#m);
            console.log(this.#x = "test");
        }
        #something = () => 1234;
    }
    
    